trying to fix submit button on mobile contact page

--- a/src/contactPage/contact.css
+++ b/src/contactPage/contact.css
@@ -82,11 +82,15 @@ button {
 }
 
 @media screen and (max-width: 600px) {
+    h1 {
+        font-size: 40px;
+    }
+    
     input {
       width: 50%;
     }
 
     button {
-        width: 50%
+        width:50%
     }
   }
